# gha_join_jobs

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE  action.yml  deps.bzl
.github/workflows/: ci.yml  move_major_ver_tag_on_release.yml  test_join.yml
libs/: BUILD.bazel  gh_actions_api_jq.sh
tests/gh_actions_api_jq_tests/: BUILD.bazel  all_jobs_concluded_with_test.sh  get_filtered_jobs_json_test.sh  get_unsuccessful_jobs_summary_test.sh  is_item_in_json_array_test.sh  jobs.json
tools/: BUILD.bazel  check_jobs.sh
