load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

bzlformat_pkg(name = "bzlformat")

sh_binary(
    name = "check_jobs",
    srcs = ["check_jobs.sh"],
    deps = [
        "//libs:gh_actions_api_jq",
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_starlib//shlib/lib:env",
        "@cgrindel_bazel_starlib//shlib/lib:fail",
    ],
)
